# UniHAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml  unihal.c  unihal.h
drivers/: CMakeLists.txt  Makefile
drivers/display/: CMakeLists.txt  ssd1306.c  ssd1306.h  ssd1675.c  ssd1675.h
drivers/display/tests/: CMakeLists.txt  Makefile  ssd1306_tests.cpp  ssd1675_tests.cpp
drivers/sensor/: CMakeLists.txt  bh1721.c  bh1721.h  bme280.c  bme280.h  mlx90614.c  mlx90614.h
drivers/sensor/tests/: bh1721_tests.cpp  bme280_tests.cpp  mlx90614_tests.cpp
generic/: CMakeLists.txt  norflash.c
gfx/: CMakeLists.txt
gfx/monogfx/: CMakeLists.txt  Makefile  monogfx.c  monogfx.h
gfx/monogfx/fonts/: CMakeLists.txt  freesans_12pt7.c  freesans_18pt7.c  freesans_24pt7.c  freesans_9pt7.c
gfx/monogfx/tests/: .gitignore  CMakeLists.txt  Makefile  monogfx_tests.cpp
gfx/monogfx/tools/: CMakeLists.txt  Makefile  monogfx_consolePrinter.c  monogfx_consolePrinter.h  monogfx_fontConverter.cpp  monogfx_printer.c  monogfx_printers.h
implementations/: unihal_mocks.cpp  unihal_simplelink.c  unihal_simplelink.h
include/unihal/: unihal.h  unihal_os.h
include/unihal/drivers/display/: ssd1306.h  ssd1675.h
include/unihal/drivers/sensor/: bh1721.h  bme280.h  mlx90614.h
include/unihal/generic/: norflash.h
include/unihal/gfx/monogfx/: monogfx.h
include/unihal/monogfx/: monogfx.h
include/unihal/monogfx/tools/: monogfx_printers.h
include/unihal/utils/: array.h  button_controller.h  crc16.h  stream.h  unihal_debug.h
monogfx/: CMakeLists.txt  monogfx.c
monogfx/fonts/: CMakeLists.txt  monogfx_FreeMonoBoldOblique_12pt.c  monogfx_FreeMonoBoldOblique_18pt.c  monogfx_FreeMonoBoldOblique_24pt.c  monogfx_FreeMonoBoldOblique_9pt.c  monogfx_FreeMonoBold_12pt.c  monogfx_FreeMonoBold_18pt.c  monogfx_FreeMonoBold_24pt.c  monogfx_FreeMonoBold_9pt.c  monogfx_FreeMonoOblique_12pt.c  monogfx_FreeMonoOblique_18pt.c  monogfx_FreeMonoOblique_24pt.c  monogfx_FreeMonoOblique_9pt.c  monogfx_FreeMono_12pt.c  monogfx_FreeMono_18pt.c  monogfx_FreeMono_24pt.c  monogfx_FreeMono_9pt.c  monogfx_FreeSansBoldOblique_12pt.c  monogfx_FreeSansBoldOblique_18pt.c  monogfx_FreeSansBoldOblique_24pt.c  monogfx_FreeSansBoldOblique_9pt.c  monogfx_FreeSansBold_12pt.c  monogfx_FreeSansBold_18pt.c  monogfx_FreeSansBold_24pt.c  monogfx_FreeSansBold_9pt.c  monogfx_FreeSansOblique_12pt.c  monogfx_FreeSansOblique_18pt.c  monogfx_FreeSansOblique_24pt.c  monogfx_FreeSansOblique_9pt.c  monogfx_FreeSans_12pt.c  monogfx_FreeSans_18pt.c  monogfx_FreeSans_24pt.c  monogfx_FreeSans_9pt.c  monogfx_FreeSerifBoldItalic_12pt.c  monogfx_FreeSerifBoldItalic_18pt.c  monogfx_FreeSerifBoldItalic_24pt.c  monogfx_FreeSerifBoldItalic_9pt.c  monogfx_FreeSerifBold_12pt.c  monogfx_FreeSerifBold_18pt.c  monogfx_FreeSerifBold_24pt.c  (+9 more)
monogfx/tests/: CMakeLists.txt  monogfx_benchmarks.cpp  monogfx_fontTests.c  monogfx_tests.cpp  monogfx_widgetTests.c
monogfx/tools/: CMakeLists.txt  monogfx_fontConverter.cpp  monogfx_printers.c
tests/: CMakeLists.txt
tests/drivers/: CMakeLists.txt
tests/drivers/display/: CMakeLists.txt  ssd1306_tests.cpp  ssd1675_tests.cpp
tests/drivers/sensor/: CMakeLists.txt  bh1721_tests.cpp  bme280_tests.cpp  mlx90614_tests.cpp
tests/utils/: CMakeLists.txt
tests_tools/: CMakeLists.txt  cpputest_comparators.cpp  cpputest_comparators.hpp  cpputest_copiers.cpp  cpputest_copiers.hpp  cpputest_mocks.cpp
utils/: CMakeLists.txt  button_controller.c  crc.h  crc16.c  crc16.h  static_assert.h  stream.c  stream.h  unihal_debug.c
utils/tests/: Makefile  button_controller_tests.cpp  stream_tests.cpp
utils/tools/: cpputest_comparators.cpp  cpputest_copiers.cpp
